[package]
name = "repos"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
color-eyre = "0.6"
itoa = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "fs", "io-util", "time", "sync", "signal"] }
